# Low_Level_Graphics_Triangulator

./: .gitignore  Cargo.toml  README.md  build.rs
shaders/: frag.glsl  vert.glsl
src/: data.rs  main.rs  rendering.rs  shader.wgsl  triangulator.rs
